syntax = "proto3";
package School.Student;

message StudentSteamingRequest {
   string Id = 1;
}
message StudentStreamingResponse {
   string Name = 1;
   string StudyProgram = 2;
   string RollNo = 3;
   string Marks = 4;
}
service TestGrpcStream {
   rpc GetStudentStream (StudentSteamingRequest) returns (stream StudentStreamingResponse);
}